# f-actor

./: .gitignore  README.md  pyproject.toml
confs/: accelerate.yaml  zero2.json
dsu_preprocessing/: get_free_gpus.py  mimi_decode_test.py  nano_decode_test.py  nanocodec_preproc.py  preproc-mono-script.sh  preproc-script-mimi.sh  preproc-script-nano.sh  proc_behavior_sd.py
eval/: calc_speaker_sim.py  count_backchannel_interrupt.py  get_ipus.py  get_stats.py  judge_dialogues.py  text_vs_dsu_stream.py  transcribe_dialogues.py  utils.py  utmos_scores.py
eval/bc_interrupt/: get_word_timestamps.py
example_dialogues/: instructions_for_example_1_2_3.txt
scripts/inference_eval/: eval.sh  inference_mimi.sh  inference_nanocodec_only_system_loss.sh  inference_nanocodec_special_tokens.sh  inference_nanocodec_utterance_alignment.sh
scripts/train/: train_mimi.sh  train_nanocodec_only_system_loss.sh  train_nanocodec_special_tokens.sh  train_nanocodec_utterance_alignment.sh
training/: convert_dsu_to_audio.py  data.py  data_collator_dsu.py  depth_decoder_head.py  finetune.py  inference.py  inference_example.py  inference_utils.py  load_dsu_model.py  model.py  modeling_dsu.py  special_tokens.py
training/arguments/: arguments.py  parse_arguments.py
training/dialogue_creation/: get_prompt.py  get_text_stream.py  utils.py
training/example_speakers/: speaker_embeddings.json
training/inference_audio/: mimi_decode.py  nano_decode.py
training/tokenizers/: add_speech_tokens.py  add_speech_tokens.sh  compare_tokenizers.py
