[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "full-duplex"
version = "0.1.0"

dependencies = [
    "transformers==4.53.3",
    "torch==2.8.0",
    "dataset==2.0.0",
    "wandb==0.22.2",
    "sentencepiece=0.2.1",
    "accelerate==1.10.1",
    "deepspeed==0.18.0",
    "pre-commit==4.3.0",
    "evaluate==0.4.6",
    "rouge_score==0.1.2",
    "librosa==0.11.0",
    "soundfile==0.13.1",
    "matplotlib==3.10.7",
    "hydra-core==1.3.2",
    "nemo-toolkit[tts]==2.5.2",
    "tqdm==4.67.1",
    "silero-vad==6.2.0",
    "jiwer==3.1.0",
    "torchcodec==0.8.0",
]

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "build", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "build", "dist*", "playground*", "scripts*", "tests*"]

[tool.black]
line-length = 88

[tool.isort]
line_length = 88
profile = "black"
